# stp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md  Requirements for CUDA.txt  adder_8lut.bench  bar_2lut.bench  bar_8lut.bench  et --mixed DF5A9D9  sin_2lut.bench  sin_8lut.bench  test.cpp
benchmarks/: c17_lut.bench  cma152a.bench  newill.bench  newill5.bench  newtag.bench  newtag3.bench  t1.bench
benchmarks/benchmark2/: 9sym_d.bench  exam1_d.bench  max46_d.bench  rd73f3.bench  rd84f4.bench  sao2f2.bench  t481_d.bench
benchmarks/benchmark3/: con2f2.bench  exam1_d.bench  rd53f3.bench  rd73f2.bench  rd84f1.bench  rd84f2.bench  rd84f4.bench  sao2f1.bench  sym10_d.bench  t481_d.bench
benchmarks/benchmark4/: 9sym_d.bench  exam1_d.bench  exam3_d.bench  rd53f1.bench  rd73f3.bench  rd84f1.bench  rd84f2.bench  rd84f4.bench  sao2f2.bench
benchmarks/benchmark5/: rd53f2.bench  rd53f3.bench  rd73f1.bench  sao2f1.bench  sym10_d.bench  t481_d.bench  xor5_d.bench
benchmarks/lut2/: exam3_d.bench  life_d.bench  newill.bench  rd53f1.bench  rd53f3.bench  rd73f1.bench  rd84f2.bench  sao2f1.bench  sao2f3.bench  sym10_d.bench  xor5_d.bench
benchmarks/lut3/: con1f1.bench  exam3_d.bench  life_d.bench  max46_d.bench  newtag.bench  rd84f1.bench  rd84f3.bench  sao2f2.bench  sao2f4.bench
benchmarks/lut4/: con1f1.bench  con2f2.bench  newtag.bench  sao2f1.bench  sao2f3.bench  sao2f4.bench  sym10_d.bench
benchmarks/lut5/: 9sym_d.bench  con1f1.bench  exam3_d.bench  max46_d.bench  rd53f1.bench  rd73f3.bench  rd84f2.bench  rd84f3.bench  sao2f3.bench  sao2f4.bench
docs/: about.rst  conf.py  index.rst  stp_compute.rst
examples/: CMakeLists.txt  dag_test.cpp  kronecker_product.cpp  matrix.cpp  mc_mul_test.cpp  stp_cuda.cu  stp_eigen.cpp  stp_logic_expr.cpp  stp_loigc_expr.cpp  stp_multi_thread.cpp  stp_normalize.cpp  stp_simulator.cpp  stp_test.cpp  test.cpp
include/: CMakeLists.txt
include/stp/: bench_parser.hpp  stp.hpp  stp_circuit.hpp  stp_cuda.hpp  stp_dag2nmx.hpp  stp_eigen.hpp  stp_logic_expr.hpp  stp_msg.hpp  stp_multi_thread.hpp  stp_normalize.hpp  stp_simulator.hpp  stp_timer.hpp  stp_utils.hpp
lib/: CMakeLists.txt
lib/kitty/.github/workflows/: windows.yml
lib/kitty/bench/: algorithms.cpp  constructors.cpp  implicant.cpp  one_bit.cpp  operations.cpp
lib/kitty/docs/: operations.rst
lib/kitty/examples/: gf16_inverse.cpp  isop.cpp  npn_enumeration.cpp  npn_enumeration_map.cpp  npn_random.cpp  spectral_enumeration.cpp  spectral_enumeration_file.cpp  spectral_enumeration_fuller.cpp  spectral_enumeration_map.cpp
lib/kitty/include/kitty/: bit_operations.hpp  operations.hpp
lib/kitty/test/: affine.cpp  algorithm.cpp  bit_operations.cpp  cnf.cpp  constructors.cpp  cube.cpp  decomposition.cpp  enumeration.cpp  hash.cpp  implicant.cpp  isop.cpp  npn.cpp  operations.cpp  partial_truth_table.cpp  permutation.cpp  print.cpp  properties.cpp  spectral.cpp  spp.cpp  tests.cpp  traits.cpp  utility.hpp
lib/mockturtle/lib/percy/percy/generators/: partial_dag_generator.hpp
src/: CMakeLists.txt  stp.cpp
src/commands/: bi_d.hpp  clear.hpp  dont_care.hpp  dsd.hpp  lut_66.hpp  lut_resyn.hpp  read_bench.hpp  sim.hpp  write_bench.hpp
src/cuda/: CMakeLists.txt  stp_cuda.cu
src/include/algorithms/: 66lut_bidec.hpp  66lut_dsd.hpp  66lut_else_dec.hpp  bench_lut.hpp  bi_dec_else_dec.hpp  bi_decomposition.hpp  circuit_graph.hpp  dsd_else_dec.hpp  else.hpp  excute.hpp  excute_cuda.hpp  lut_func_cache.hpp  mix_dsd.hpp  mix_else_dec.hpp  node_global.hpp  normalize.hpp  reorder.hpp  stp_circuit.hpp  stp_dsd.hpp  stp_utils.hpp  stp_vector.hpp  strong_bi_dec.hpp  strong_dsd.hpp  strong_else_dec.hpp  truth_table.hpp
src/include/io/: bench_parser.hpp  expr_parser.hpp  lut_parser.hpp
src/include/sim/: sim.hpp  simulator.hpp
test/: CMakeLists.txt  stp_eigen.cpp  stp_logic_expr.cpp  stp_utils.cpp  test.cpp
test/benchmarks/: c17_lut_new.bench  e1.bench  t2.bench
test/benchmarks/lut2/: 002_2.bench  con1f1.bench  con2f2.bench  newtag.bench  rd53f2.bench  rd73f2.bench  rd84f1.bench  rd84f3.bench  sao2f4.bench
test/benchmarks/lut3/: 9sym_d.bench  con2f2.bench  exam1_d.bench  newill.bench  rd53f1.bench  rd53f2.bench  rd73f1.bench  rd73f3.bench  rd84f4.bench  sao2f3.bench  xor5_d.bench
test/benchmarks/lut4/: life_d.bench  max46_d.bench  newill.bench  rd53f2.bench  rd53f3.bench  rd73f1.bench  rd73f2.bench  rd84f3.bench  t481_d.bench  xor5_d.bench
test/benchmarks/lut5/: life_d.bench  newtag.bench  rd73f2.bench  sao2f2.bench
test/test_case/: stp_dsd_test.cpp  stp_utils.cpp
